2006-11-11  rgareus  <robin@gareus.org>
 - implemented message queues: xjremote!
 - 'remote=yes|no' config file option
 - -L, --nolash
 - more variables stored in lash config.
 - preliminary qjadeo patch -> xjremote.

2006-11-10  rgareus  <robin@gareus.org>
 - icon
 - fixed qt BINDIR define (again)
 - prepared remote stdio replacement: mqueues
   prereq. for proper lash + gui 

2006-11-09  rgareus  <robin@gareus.org>
 - display_x11 cleanup part one.
 - docs description update
 - seek timeout.
 - re-indented sources (!)

2006-11-09  rgareus  <robin@gareus.org>
 - on LASH resume -> ignore '-R' remote-mode 
 - imlib2 - RGB24+RGBA32
 - dropped gdk/gtk 
 - revamped configure.ac
 - fixed continuous seeking (was in debug mode)

2006-11-07  rgareus  <robin@gareus.org>
 - preliminary LASH support - so far only command line args.
 - preliminary Xv/x11 dnd

2006-11-06  rgareus  <robin@gareus.org>
 - imlib2 support

2006-11-05  rgareus  <robin@gareus.org>
 - added support for LIBAVCODEC_BUILD 4646 (ffmpeg-0.4.9-pre1)
   old seek code.

2006-11-04  rgareus  <robin@gareus.org>
 - changed default seek behaviour to SEEK_ANY
   -k -> seek only to keyframes
   -K -> continuously decode all frames (starting @ keyframe)
 - config-file option seek=any|key|cont
 - removed hardcoded list of font files.

2006-10-28  rgareus  <robin@gareus.org>
 - made -V a little more verbose. and -q a little more quiet :D

2006-10-28  rgareus  <robin@gareus.org>
 - changed audioframe -> videoframe conversion back to floor() 
 - updated framerate detection.
 - re-indented seek code. and changed -K, -k behaviour (no continuous seeks)
 - fixed ffmpeg packet allocation 
 - XV-videomode only:
   - added always on top feature. ( '-a' ; press 'a' on widow ; no remote command for that yet)
   - added support to hide [mouse] cursor  (press 'm' )

2006-08-27  rgareus  <robin@gareus.org>
 - added simple Extended Window Manager Hints(EWMH) fullscreen support for XV videomode.

2006-08-12  rgareus  <robin@gareus.org>